--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "node-fetch": "^3.3.2", 
     "express": "^4.18.2"
   },
   "devDependencies": {
